デバッグ構成を作成

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "esbenp.prettier-vscode",
         "sibiraj-s.vscode-scss-formatter",
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        "msjsdiag.debugger-for-chrome"
     ]
 }
