markdownのルールを追加

--- a/.editorconfig
+++ b/.editorconfig
@@ -27,3 +27,8 @@ trim_trailing_whitespace = unset
 
 [{test/fixtures,deps,tools/node_modules,tools/gyp,tools/icu,tools/msvs}/**]
 insert_final_newline = false
+
+[*.{md,txt}]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = false
