yamlの設定を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,15 @@
     "editor.suggest.insertMode": "replace",
     "editor.defaultFormatter": "sibiraj-s.vscode-scss-formatter",
   },
+  "[yaml]": {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
+    "editor.autoIndent": "keep",
+    "editor.quickSuggestions": {
+      "other": true,
+      "comments": false,
+      "strings": true
+    },
+    "editor.defaultFormatter": "redhat.vscode-yaml",
+  },
 }
