--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "esbenp.prettier-vscode",
     "sibiraj-s.vscode-scss-formatter",
     "editorconfig.editorconfig",
-    "msjsdiag.debugger-for-chrome"
+    "msjsdiag.debugger-for-chrome",
+    "redhat.vscode-yaml"
   ]
 }
